Bug 676842 - nsTextEditorState.h should include nsString.h; r=ehsan